<resources>
    <string name="app_name">MSG-GCMS</string>
    <string name="club_application_deadline">동아리 신청마감하기</string>
    <string name="application_list">가입 대기자명단</string>
    <string name="create_club">동아리 개설</string>
    <string name="banner">배너</string>
    <string name="add_picture">사진을 추가해 주세요.</string>
    <string name="club_type">동아리 유형</string>
    <string name="introduce_club">동아리 소개</string>
    <string name="major">전공</string>
    <string name="majorClub">전공 동아리</string>
    <string name="free">자율</string>
    <string name="freeClub">자율 동아리</string>
    <string name="personal">사설</string>
    <string name="personalClub">사설 동아리</string>
    <string name="afterSchool">방과후</string>
    <string name="detail">세부사항</string>
    <string name="club_name">동아리 이름</string>
    <string name="enter_club_name">동아리 이름을 입력해주세요.</string>
    <string name="club_introduction">동아리 설명</string>
    <string name="enter_club_introduction">동아리 설명을 입력해주세요.</string>
    <string name="teacher_in_charge">담당 선생님</string>
    <string name="who_teacher_in_charge">담당 선생님 성함을 입력해주세요.</string>
    <string name="contact_number">연락처</string>
    <string name="contact_number_example">연락처를 입력해주세요.(디스코드, 이메일 등)</string>
    <string name="club_picture">동아리 사진</string>
    <string name="club_member">동아리 구성원</string>
    <string name="completion">완료</string>
    <string name="search_member">너, 내 동료가 돼라</string>

    <string name="example_text">…</string>

    <string name="login">로그인</string>
    <string name="sign_up_kr">회원가입</string>
    <string name="gsm_title">GSM동아리\n관리의 모든것</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_page_gcms">it’s GCMS sign up now</string>
    <string name="back">되돌아가기</string>

    <string name="login_en">Login</string>
    <string name="school_email">학교 이메일을 입력해주세요.</string>
    <string name="password">비밀번호를 입력해주세요.</string>
    <string name="gsm_hs_kr">gsm.hs.kr</string>
    <string name="forget_password">비밀번호를 잊으셨나요?</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="email_access">이메일 인증하기</string>
    <string name="send_check_email_msg">당신의 이메일로\n인증번호를 발송했습니다.</string>

    <string name="make_club">동아리 개설</string>
    <string name="one">1</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="link">관련 링크</string>
    <string name="link_name">링크 이름</string>
    <string name="link_url">링크 URL</string>
    <string name="optional">[선택]</string>
    <string name="next">다음</string>
    <string name="major_explanation">전공 심화를 위한\n 활동을 하는 동아리</string>
    <string name="free_explanation">같은 관심사를 가진\n 학생들이 모인 동아리</string>
    <string name="personal_explanation">학생들이 교내에서\n 자율적으로 만든 동아리</string>
    <string name="use_email_in_gcms">학교 이메일은 아이디로 사용됩니다.</string>
    <string name="emailcheck_fail">인증번호가 틀렸거나\n만료되었습니다.</string>
    <string name="check">확인</string>
    <string name="google_login">Google로 계속하기</string>
    <string name="notion_link">노션 링크</string>
    <string name="club_description">동아리 설명</string>
    <string name="club_description_text">동아리 설명 부분</string>
    <string name="club_promotion">동아리 홍보</string>
    <string name="club_teacher">담당선생님</string>
    <string name="name">이름</string>
    <string name="club_boss">부장</string>
    <string name="club_boss_name">이름</string>
    <string name="contact">연락처</string>

    <string name="club_application">동아리 신청하기</string>
    <string name="club_application_cancle">신청취소하기</string>
    <string name="close_application">동아리 신청 마감하기</string>
    <string name="open_application">동아리 신청 오픈하기</string>
    <string name="aready_closed">마감됨</string>
    <string name="application">신청</string>
    <string name="ask_application_club">%1$s동아리에 신청하시겠습니까?</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="search_user_str">너, 내 동료가 돼라</string>
    <string name="student_search_str">학생 검색</string>
    <string name="select_str">선택</string>
    <string name="application_cancel">신청취소</string>
    <string name="ask_cancel_application">동아리 신청을 취소하시겠습니까?</string>
    <string name="deadline">마감</string>
    <string name="open">오픈</string>
    <string name="ask_dead_club_application">동아리 신청을 마감하시겠습니까?</string>
    <string name="ask_open_club_application">동아리 신청을 오픈하시겠습니까?</string>
    <string name="explain_club">동아리 설명</string>
    <string name="promotion_club">동아리 홍보</string>
    <string name="members">구성원</string>
    <string name="directory">연락처</string>
    <string name="menu">Menu</string>

    <string name="club_member_management">동아리 멤버 관리</string>
    <string name="club_edit">동아리 수정하기</string>
    <string name="club_delete">동아리 삭제하기</string>

    <string name="club_member_showing">동아리 멤버 확인</string>
    <string name="club_leave">동아리 탈퇴</string>
    <string name="terms_of_service">서비스 이용 약관</string>
    <string name="privacy_policy">개인정보 처리 방침</string>

    <string name="logoutAsk">가시려구요?</string>
    <string name="logoutBtn">로그아웃</string>
    <string name="withdrawalBtn">회원탈퇴</string>

    <string name="withdrawal">탈퇴하기</string>
    <string name="withdrawalAsk">탈퇴하시기 전에 확인해 주세요!</string>
    <string name="withdrawalRule1">유저의 프로필, 아이디 등이 사라지게 됩니다.</string>
    <string name="withdrawalRule2">본인이 생성한 동아리도 함께 삭제됩니다.</string>
    <string name="withdrawalCheck">위 사항을 확인 했으며 동의합니다</string>

    <string name="myProfile">내 프로필</string>
    <string name="profileDefaultName">닉네임</string>
    <string name="profileDefaultClass">x학년 x반 x번</string>
    <string name="period"><u>x교시</u></string>

    <string name="findClub">찾아보기</string>
    <string name="noAfterSchool">아직 가입된 방과후가 없어요</string>
    <string name="joinAfterSchoolAsk">방과후에 가입하세요!</string>

    <string name="clubMemberManage">동아리 멤버 관리</string>
    <string name="mandate">위임</string>
    <string name="withdrawal2">강퇴</string>
    <string name="approve">승인</string>
    <string name="refuse">거절</string>

    <string name="create_club_success_state">동아리 개설 신청 됨</string>
    <string name="create_club_success_message">어드민이 동아리 개설 신청을 수락한 후에\n동아리가 개설돼요</string>

    <string name="create_club_error_state">동아리 생성 실패</string>
    <string name="create_club_unknown_error_state">알 수 없는 오류 발생!!</string>
    <string name="create_club_server_error_state">일시적인 서버 오류 발생</string>

    <string name="create_club_forbidden_message">이미 다른 전공 혹은 자율 동아리에\n 소속되었거나 신청중이에요.</string>

    <string name="create_club_server_message">잠시후에 다시 시도해주세요.</string>

    <string name="create_club_unknown_message">개발자에게 문의해주세요</string>

    <string name="club_attend_member_check">동아리 출석체크</string>
    <string name="club_attend_member_check_button">출석 체크하기</string>

    <string name="attend">출석</string>
    <string name="sick">병결</string>
    <string name="late">지각</string>
    <string name="absent">결석</string>
    <string name="attend_member_attend_ask">....\n외 x의 학생을 출석체크하시겠습니까?</string>
    
    <string name="timeSetting">시간 설정</string>
    <string name="eight_period">8교시</string>
    <string name="nine_period">9교시</string>
    <string name="ten_period">10교시</string>
    <string name="eleven_period">11교시</string>
</resources>
