<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clubMaker"
            type="com.msg.gcms.ui.component.clubmaker.MakeClubFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_black">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.055" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.945" />

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="20dp"
                android:layout_height="27dp"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:src="@drawable/ic_back_btn"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/notosans"
                android:text="@string/create_club"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:fontFamily="@font/notosans"
                android:text="@string/banner"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/backBtn" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/uploadBannerBtn"
                android:layout_width="0dp"
                android:layout_height="220dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_banner_placeholder"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_banner_placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/add_picture"
                    android:textColor="@color/gray_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/notosans"
                android:text="@string/club_type"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/uploadBannerBtn" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_club_type"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <RadioButton
                    android:id="@+id/majorBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/selector_club_type"
                    android:button="@android:color/transparent"
                    android:fontFamily="@font/notosans"
                    android:gravity="center"
                    android:text="@string/major"
                    android:textColor="@drawable/selector_make_club_text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/freeBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/selector_club_type"
                    android:button="@android:color/transparent"
                    android:fontFamily="@font/notosans"
                    android:gravity="center"
                    android:text="@string/free"
                    android:textColor="@drawable/selector_make_club_text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/personalBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/selector_club_type"
                    android:button="@android:color/transparent"
                    android:fontFamily="@font/notosans"
                    android:gravity="center"
                    android:text="@string/personal"
                    android:textColor="@drawable/selector_make_club_text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/notosans"
                android:text="@string/club_name"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <EditText
                android:id="@+id/clubNameEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="no"
                android:background="@drawable/bg_make_club_et"
                android:hint="@string/enter_club_name"
                android:lines="1"
                android:textColorHint="@color/gray_2"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/notosans"
                android:text="@string/club_introduction"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/clubNameEt" />

            <EditText
                android:id="@+id/clubIntroductionEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="no"
                android:background="@drawable/bg_make_club_et"
                android:fontFamily="@font/notosans"
                android:gravity="top"
                android:hint="@string/enter_club_introduction"
                android:lines="5"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_2"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/notosans"
                android:text="@string/teacher_in_charge"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@id/clubIntroductionEt" />

            <EditText
                android:id="@+id/clubTeacherEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="no"
                android:background="@drawable/bg_make_club_et"
                android:hint="@string/who_teacher_in_charge"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_2"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@id/textView8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/notosans"
                android:text="@string/contact_number"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@id/clubTeacherEt" />

            <EditText
                android:id="@+id/contactNumberEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="no"
                android:background="@drawable/bg_make_club_et"
                android:hint="@string/contact_number_example"
                android:lines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_2"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@id/textView9" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/notosans"
                android:text="@string/club_picture"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@id/contactNumberEt" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/clubPicturesRv"
                android:layout_width="0dp"
                android:layout_height="151dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@id/textView7">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/notosans"
                android:text="@string/club_member"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@id/clubPicturesRv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/clubMembersRv"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@id/textView10"
                tools:listitem="@layout/list_club_member"/>

            <TextView
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="60dp"
                android:background="@color/dark_blue"
                android:fontFamily="@font/notosans"
                android:gravity="center"
                android:text="@string/completion"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clubMembersRv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
