<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="profileNoAfterSchool"
            type="com.msg.gcms.presentation.view.profile.ProfileNoAfterSchoolFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_black"
        android:layout_marginBottom="87dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="56dp"
            android:id="@+id/findAfterSchoolBtn"
            android:background="@drawable/bg_find_club_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingHorizontal="33dp"
            android:paddingVertical="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/findClub"
            android:fontFamily="@font/notosans"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/noClubTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/findAfterSchoolBtn"
            android:layout_marginTop="8dp"
            android:textColor="@color/gray_9"
            android:textSize="14sp"
            android:fontFamily="@font/notosans"
            android:text="@string/noAfterSchool"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textColor="@color/gray_10"
            android:textSize="12sp"
            android:fontFamily="@font/notosans"
            android:text="@string/joinAfterSchoolAsk"
            app:layout_constraintTop_toBottomOf="@id/noClubTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>